bugfix SimpleAssigner